--- a/home.css
+++ b/home.css
@@ -1,5 +1,3 @@
-
-
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
 
 body {
@@ -17,7 +15,7 @@ body {
     max-width: 1200px;
 }
 
-.backgroud_container {
+/* .backgroud_container {
     display: flex;
     max-height: 500px;
     overflow:hidden;
@@ -25,8 +23,7 @@ body {
 
 .backgroud_container img {
     width: 100%;
-    object-fit: cover;
-}
+} */
 
 /* Menu layout */
 .menu {
@@ -35,30 +32,129 @@ body {
     padding: 0 20px;
 }
 
-    .top_nav{
-        width: 100%;
-        height: 54px;
-        max-width: 1200px;
-        background-color: rgb(42, 42, 42);
-        display: block;
-        position: fixed;
-        z-index: 3;
-    }
+.top_nav {
+    /* width: 100%; */
+    height: 54px;
+    /* max-width: 1200px; */
+    background-color: rgb(42, 42, 42);
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+}
+
+.conig {
+    position: relative;
+    top: 54px;
+    text-align: center;
+}
+
+.ig {
+
+    align-self: center;
+}
+
+.syncopate-bold {
+    font-family: "Syncopate", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    /* font-size: 50px; */
+    font-size: 5vw;
+    margin: 0;
+}
+
+.caveat {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+    /* font-size: 24px; */
+    font-size: 2.5vw;
+    margin: 0;
+}
+
+.p_container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.top_nav .num {
+    position: absolute;
+    color: white;
+    font-size: 10px;
+    top: 11px;
+    right: 11px;
+}
+
+
+.num_of_orders {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: red;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    top: 7px;
+    right: 7px;
+    color: white;
+    border: 1px solid rgb(42, 42, 42);
+}
+
+.num_of_orders.active {
+    display: flex;
+}
 
 
 .material-symbols-outlined {
-  color: rgb(190, 190, 190);
+    color: rgb(190, 190, 190);
 }
 
 .cart_icon {
-        font-size: 28px;
-        float: right;
-        margin: 13px;
-        cursor: pointer;
+    font-size: 28px;
+    float: right;
+    margin: 13px;
+    cursor: pointer;
+}
+
+@keyframes kf_cart_expand {
+    0% {
+        opacity: 0.5;
+        height: 0%;
     }
 
+    100% {
+        opacity: 1;
+        height: 50%;
+    }
+}
+
+.cart-dropdown {
+    display: none;
+    position: fixed;
+    top: 53px;
+    right: 0;
+    float: right;
+    width: 50%;
+    height: 50%;
+    max-width: 380px;
+    min-width: 300px;
+    max-height: 800px;
+    /* overflow:scroll; */
+    border-radius: 0 0 0 5px;
+    z-index: 1;
+    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    animation: kf_cart_expand 0.5s;
+}
+
 .category {
-  margin-bottom: 32px;
+    margin-bottom: 32px;
 }
 
 /* .tempContainer{
@@ -72,18 +168,18 @@ body {
 } */
 
 .tempContainer {
-  display: grid;
-  
+    display: grid;
+
     /* grid-template-columns: auto auto auto; */
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 40px;
 }
 
 .menu h1 {
-  margin: 50px auto;
-  color: #333;
-  text-align: center;
-  font-size: 48px;
+    margin: 50px auto;
+    color: #333;
+    text-align: center;
+    font-size: 48px;
 }
 
 .menu-item {
@@ -117,7 +213,8 @@ body {
 }
 
 .menu-item-content h3 {
-    color: #ba783b; /* Red */
+    color: #ba783b;
+    /* Red */
     margin: 15px 0 0 0;
     font-size: 26px;
 }
@@ -167,22 +264,10 @@ body {
     background-color: white;
 }
 
-.file_icon {
-    display: none;
-    align-self: center;
-    /* font-size: 20px !important; */
-    margin-right: 30px;
-    cursor: pointer;
-    transform: rotateY(180deg);
-    z-index: 3;
-    text-shadow: 0 0 6px rgba(0, 0, 0, 0.9);
-}
-
 .close_icon {
-    
-   position: absolute;
-   top: 10px;
-   right: 20px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
     margin-right: 20px;
     float: right;
     color: white;
@@ -230,7 +315,7 @@ body {
     opacity: 0.5;
 }
 
-.clearButton{
+.clearButton {
     margin: 0 !important;
     padding: 0 !important;
     margin-left: 10px !important;
@@ -247,7 +332,7 @@ body {
         padding-bottom: 100px;
     }
 
-    .tempContainer{
+    .tempContainer {
         gap: 50px;
     }
 
@@ -259,13 +344,11 @@ body {
 
 
     .menu-item img {
-      
-      width: 100%; /* Ensure image takes full width of container */
-      height: fit-content; /* Ensure image takes full height of container */
-      object-fit: contain; /* Scales down to fit, maintains aspect ratio */
-      /* max-width: 200px;
-      min-width: 200px; */
-      transition: 1s ease;
+
+        width: 100%;
+        height: fit-content;
+        object-fit: contain;
+        transition: 1s ease;
     }
 
 
@@ -282,21 +365,13 @@ body {
         font-size: 16px;
     }
 
-    .image_icon_container {
-        position: relative;
-        top: 0;
-        left: 0;
-        justify-content: center;
+
+    .syncopate-bold {
+        font-size: 7vw;
     }
 
-    .file_icon {
-        display: block;
+    .caveat{
+        font-size: 3.5vw;
     }
-
-    .close_icon {
-        position: absolute;
-        top: 10px;
-        right: 20px;
-}
 
 }
