--- a/home.css
+++ b/home.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
+@import url('https://fonts.googleapis.com/css2?family=Lato');
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    /* font-family: 'Arial', sans-serif; */
+      font-family: "Lato", sans-serif;
     /* background-color: #cecece; */
     background-color: #f1f8fb;
     min-width: 400px;
@@ -91,10 +93,11 @@ body {
 }
 
 
-.num_of_orders {
+#cart_num_id {
     display: none;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     position: absolute;
     background-color: red;
     border-radius: 50%;
@@ -106,7 +109,7 @@ body {
     border: 1px solid rgb(42, 42, 42);
 }
 
-.num_of_orders.active {
+#cart_num_id.active {
     display: flex;
 }
 
@@ -130,42 +133,200 @@ body {
 
     100% {
         opacity: 1;
-        height: 50%;
+        height: 90%;
     }
 }
 
-.cart-dropdown {
-    display: none;
-    position: fixed;
-    top: 53px;
-    right: 0;
-    float: right;
-    width: 50%;
-    height: 50%;
-    max-width: 380px;
-    min-width: 300px;
-    max-height: 800px;
-    /* overflow:scroll; */
-    border-radius: 0 0 0 5px;
+            .cartItemContainter {
+                display: flex;
+                flex-direction: row;
+                position: relative;
+                width: 90%;
+                height: 70px;
+                margin: 15px 10px 0 15px;
+                padding: 0 0 10px 0;
+                border-bottom: 1px solid rgb(134, 134, 134);
+            }
+
+
+            .leftpic {
+                flex: 1;
+            }
+
+            .leftpic img {
+                width: auto;
+                height: 100%;
+                overflow: hidden;
+
+                object-fit: contain;
+                border-radius: 5px;
+            }
+
+            .rightname {
+                flex: 3;
+                margin-left: 10px;
+            }
+
+            .rightname p {
+                margin: 0;
+            }
+
+.pan_text{
+    /* color: #555; */
+    color: rgba(243, 56, 56, 0.88);
+    font-size: 14px;
+}
+
+
+.blurred {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 87% !important; /* TODO: 'fix'/solve this problem later*/
+  filter: grayscale(100%) brightness(50%);
+  clip-path: inset(0 0 0 50%);
+}
+
+
+#cart_contents_id {
+  position: fixed;
+  top: 53px;
+  right: 0;
+  /* inset: 0; */
+  width: 50%;
+  height: 50%;
+  /* height:min-content; */
+  /* overflow-y: auto;  */
+
+  max-width: 380px;
+  min-width: 300px;
+  max-height: 400px;
+  /* background: rgba(0,0,0,0.4);  */
+  display: none; 
+  z-index: 2;
+    flex-direction: column;
+}
+
+.cart-container {
+  height: 90%;
+  background-color: #c8c8c8;
+}
+
+.cartContent {
+    display: block;
+    flex: 1; 
+    overflow-y: auto;
+    overscroll-behavior: contain;
+    width: 100%;
+    height:90%;
+    height:fit-content;
+
     z-index: 1;
     box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
     background-color: white;
-    animation: kf_cart_expand 0.5s;
+    /* animation: kf_cart_expand 0.5s; */
 }
+
+#nothing_in_cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(241, 240, 240);
+    height:100%; 
+}
+
+.cartItems {
+  width: 100%;
+}
+
+.pan_button_div{
+    /* display: flex;
+    justify-content: center;*/
+    padding: 10px 0 10px 0; 
+    width: 100%;
+
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1%;
+}
+
+.pan_button_div button{
+
+    height: 40px;
+    /* width: 90px; */
+    padding: 0;
+    width: 100%;
+    /* aspect-ratio: 3 / 1; */
+    cursor: pointer;
+}
+
+.portionButton{
+    background-color: #ffad5057;
+    color: orange;
+    font-size: 10px;
+    border: none;
+    border-radius: 80px;
+}
+
+.portionButton.active{
+    border: 3px solid orange;
+}
+
+.addtocartButton{
+    height: 40px;
+    width: 100%;
+    background-color: #64afff;
+    color: white;
+    aspect-ratio: 3 / 1;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 80px;
+    cursor: pointer;
+}
+
+.disableAddToCart{
+    
+    background-color: #bebebe;
+    cursor: default;
+}
+
+.checkout {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 10%;
+    z-index: 4;
+    border-top: 1px solid #ccc;
+    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
+    border-radius: 0 0 0 10px;
+    padding: 10px 15px;
+    background: #f9f9f9;
+    text-align: center;
+}
+
+.checkout button {
+  background: #28a745;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 4px;
+  width: 100px;
+  height: 40px;
+}
+
+.checkout button:hover {
+  background: #218838;
+}
+
 
 .category {
     margin-bottom: 32px;
 }
 
-/* .tempContainer{
-
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-self: center;
-    background-color: green;
-    
-    max-width: 800px;
-} */
 
 .tempContainer {
     display: grid;
@@ -208,23 +369,26 @@ body {
 }
 
 .menu-item-content {
-    margin-inline: 20px;
+    margin: 15px;
     flex: 1;
 }
 
 .menu-item-content h3 {
     color: #ba783b;
-    /* Red */
-    margin: 15px 0 0 0;
-    font-size: 26px;
+    /* margin: 15px 0 0 0; */
+    margin: 0;
+    font-size: 24px;
 }
 
 .menu-item-content p {
-    /* margin: 15px 0 0 0; */
-    padding-bottom: 30px;
+    margin: 10px 0 0 0;
     font-size: 18px;
     color: #555;
 }
+
+    .menu-item-content a{
+        font-size: 16px !important;
+    }
 
 .menu-item-content input {
     transform: scale(1.2);
@@ -281,47 +445,88 @@ body {
 
 .checkboxDiv {
     display: flex;
-    position: absolute;
-    padding: 20px;
+    /* justify-content: space-around; */
+    justify-content: center;
+    align-self: center;
+    gap: 2px;
+    /* height: 100%; */
+    /* width: auto; */
+    
+    /* aspect-ratio: 1 / 1; */
+    /* position: absolute; */
+    /* padding: 15px;
     bottom: 0;
-    left: 0;
+    left: 0; */
 }
 
 .checkboxMinus,
 .checkboxPlus {
+    width: 30px;
+    height: 30px;
     cursor: pointer;
-    width: 20px;
-    background: #f2f2f2;
-    border-radius: 4px;
-    border: 1px solid #ddd;
+    /* margin-inline: 2px; */
+    /* width: 20px; */
+    /* background: #f6992f37; */
+    border-radius: 40px;
+    /* border: 1px solid #ddd; */
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size:26px;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .checkboxInput {
-    width: 15px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0;
+    font-size:20px;
+    /* border: 1px solid #ddd; */
+    /* background: #f6992f37; */
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    color: rgba(0, 0, 0, 0.5);
+    
+}
+
+.cartPlusMinusDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 3px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.cartMinusSign, 
+.cartPlusSign{
+    width:  18px;
     height: 18px;
     text-align: center;
-    font-size: 16px;
-    margin-inline: 4px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 2px;
+
 }
 
-.checkboxMinus:hover,
+.cartTrashIcon{
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+}
+
+
+/* .checkboxMinus:hover,
 .checkboxPlus:hover {
-    background-color: #8c8c8c;
     opacity: 0.5;
-}
-
-.clearButton {
-    margin: 0 !important;
-    padding: 0 !important;
-    margin-left: 10px !important;
-    text-decoration: underline;
-    /* margin-left: 15px; */
-}
+} */
 
 
 @media screen and (max-width: 600px) {
@@ -338,7 +543,7 @@ body {
 
 
     .menu-item {
-        width: 90%;
+        width: 100%;
         margin: auto;
     }
 
@@ -346,16 +551,16 @@ body {
     .menu-item img {
 
         width: 100%;
-        height: fit-content;
+        height: wrap;
         object-fit: contain;
         transition: 1s ease;
     }
 
 
-    .menu-item-content {
-        /* text-align: center; */
+    /* .menu-item-content {
+        text-align: center;
         padding: 10px 0;
-    }
+    } */
 
     .menu-item-content h3 {
         font-size: 20px;
@@ -364,7 +569,6 @@ body {
     .menu-item-content p {
         font-size: 16px;
     }
-
 
     .syncopate-bold {
         font-size: 7vw;
