--- a/home.css
+++ b/home.css
@@ -388,36 +388,55 @@ body {
             justify-content: center;
             align-items: center;
             /* width: fit-content; */
-            margin: 16px 0 0 13px;
+            margin: 15px 0 0 12px;
+            /* margin-block: auto; */
             gap: 4px;
-            height: 20px;
+            height: 24px;
             z-index: 999;
         }
 
         .languageContainer img{
-            height: 10px;
+            position: absolute;
+            margin: auto;
+            /* padding-inline: 3px; */
+            height: 14px;
+            z-index: 1;
+        }
+
+        .usa{
+
+            left: 4px;
+            top:23%;
+            border-radius: 3px;
+        }
+
+        .dr{
+            right: 4px;
+            top:23%;
+            border-radius: 3px;
         }
 
         .switchLanguage{
-            
+            display: flex;
+            position: relative;
             background: white;
             height: 100%;
-            
-            aspect-ratio: 1.6/1;
-            border-radius: 25px;
+            aspect-ratio: 2.5/1;
+            border-radius: 50px;
         }
 
         .switchBall{
             height: 100%;
-            aspect-ratio: 1/1;
+            aspect-ratio: 1.3/1;
             background: rgb(70, 178, 70);
-            border-radius: 50%;
+            border-radius: 50px;
             transition: transform 0.5s ease;
             transform: translateX(0);
+            box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.9);
         }
 
         .switchBall.changeToSpanish{
-        transform: translateX(60%);
+        transform: translateX(92%);
     }
 
 
