--- a/home.css
+++ b/home.css
@@ -149,7 +149,7 @@ body {
                 margin: 15px 10px 0 15px;
                 padding: 0 0 10px 0;
                 border-bottom: 1px solid rgb(134, 134, 134);
-            }
+             }
 
 
             .leftpic {
@@ -221,7 +221,8 @@ body {
     /* height:fit-content; */
 
     z-index: 1;
-    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
+    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
     background-color: white;
     /* animation: kf_cart_expand 0.5s; */
 }
@@ -243,6 +244,8 @@ body {
     justify-content: center;*/
     padding: 10px 0 10px 0; 
     width: 100%;
+    margin-inline: auto;
+    max-width: 600px;
 
   display: grid;
   grid-template-columns: auto auto;
@@ -274,6 +277,8 @@ body {
 .addtocartButton{
     height: 46px;
     width: 100%;
+    max-width: 600px;
+    margin-inline: auto;
     background-color: #64afff;
     color: white;
     aspect-ratio: 3 / 1;
@@ -292,34 +297,34 @@ body {
 
 .checkout {
     display: flex;
-    justify-content: space-around;
+    justify-content:space-between;
     align-items: center;
-    width: 100%;
-    height: 10%;
-    min-height: fit-content;
+    /* width: 90%; */
+    /* height: 10%; */
+    /* min-height: fit-content; */
     z-index: 4;
     /* border-top: 1px solid #ccc;   */
     box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
     border-radius: 0 0 0 10px;
     padding: 10px 15px;
-    background: #f9f9f9;
+    background-color: white;
     text-align: center;
 }
 
 .checkout button {
-  background: #28a745;
+  background: #3939398b;
   color: white;
   border: none;
-  padding: 10px 15px;
   cursor: pointer;
   font-size: 14px;
   border-radius: 4px;
   width: 100px;
   height: 40px;
+
 }
 
-.checkout button:hover {
-  background: #218838;
+.checkout button.enabled{
+  background: #199536da;
 }
 
 
@@ -346,20 +351,19 @@ body {
 .menu-item {
     display: flex;
     flex-direction: column;
-    background: #FFFFFF;
-    position: relative;
+    background: #393939;
+    /* position: relative; */
     margin-bottom: 15px;
     border-radius: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .menu-item img {
     width: 100%;
     border-radius: 16px 16px 0 0;
-    object-fit: contain;
-    transition: 1s ease;
+    /* object-fit: contain; */
 }
 
 .menu-item img:hover {
@@ -370,7 +374,9 @@ body {
 
 .menu-item-content {
     /* min-height: 200px; */
-    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 16px;
     flex: 1;
 }
 
@@ -443,12 +449,8 @@ body {
 .menu-item-content p {
     margin: 10px 0 5px 0;
     font-size: 18px;
-    color: #555;
+    color: #e6e6e6;
 }
-
-    .menu-item-content a{
-        font-size: 16px !important;
-    }
 
 .menu-item-content input {
     transform: scale(1.2);
@@ -465,7 +467,90 @@ body {
     margin-block: 10px;
 }
 
-.image_viewer_window {
+#qrcode-div-id{
+    display: none;
+    /* align-content: center; */
+    flex-direction: column;
+    position: fixed;
+    top: 54px;
+    left: 0;
+    right:0;
+    bottom: 0;
+    width: 90%;
+    /* height: 86%; */
+    max-width: 400px;
+    max-height: 650px;
+    margin: 10px auto;
+    /* margin: 15px; */
+    background-color: #fffffffc;
+    z-index: 1;
+    border-radius: 20px;
+    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
+
+    /* display: flex;           */
+    justify-content: center;    /* center horizontally */
+    align-items: center;  
+    align-content: center;
+    
+    /* justify-self: center; */
+} 
+
+#qrcode-div-id h1{
+    text-align: center;
+    margin-top: 0;
+    margin-bottom:40px;
+}
+
+#qrcode-div-id p{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    margin-inline: 10px;
+}
+
+/* .txt{
+    
+    text-align: center;
+} */
+
+.close_qrcode_window{
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    /* margin-right: 20px; */
+    float: right;
+    color: black;
+    font-size: 40px;
+    transition: 0.3s;
+    cursor: pointer;
+    /* z-index: 3; */
+    /* text-shadow: 0 0 6px rgba(0, 0, 0, 0.9); */
+}
+
+#currentDateId{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 18px;
+}
+
+#save-qr-button{
+    position: absolute;
+    height: 50px;
+    width: 90%;
+    /* aspect-ratio: 3/1; */
+    /* max-width: 200px; */
+    bottom: 16px;
+    /* right:16px; */
+    font-size: 20px;
+    border: none;
+    background-color: #64afff;
+    color: white;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+#image_viewer_window {
     display: none;
     align-content: center;
     position: fixed;
@@ -482,7 +567,7 @@ body {
     display: block;
     justify-self: center;
     width: 100%;
-    max-width: 700px;
+    max-width: 900px;
     height: fit-content;
     z-index: 2;
     background-color: white;
@@ -596,6 +681,7 @@ body {
 }
 
 
+
 @media screen and (max-width: 600px) {
 
     .menu {
@@ -617,10 +703,10 @@ body {
 
     .menu-item img {
 
-        width: 100%;
-        height: wrap;
+        /* width: 100%; */
+        /* height: wrap; */
         object-fit: contain;
-        transition: 1s ease;
+        /* transition: 1s ease; */
     }
 
 
