--- a/home.css
+++ b/home.css
@@ -51,10 +51,10 @@ body {
     position: relative;
     top: 54px;
     text-align: center;
+    margin-bottom: 100px;
 }
 
 .ig {
-
     align-self: center;
 }
 
@@ -191,24 +191,26 @@ body {
   clip-path: inset(0 0 0 50%);
 }
 
+#cart_contents_id.open {
+    overflow:visible;
+  height: 50%;
+}
+
 
 #cart_contents_id {
   position: fixed;
   top: 53px;
   right: 0;
-  /* inset: 0; */
   width: 50%;
-  height: 50%;
-  /* height:min-content; */
+  height: 0;
   /* overflow-y: auto;  */
-
   max-width: 380px;
   min-width: 300px;
   max-height: 400px;
-  /* background: rgba(0,0,0,0.4);  */
-  display: none; 
   z-index: 2;
-    flex-direction: column;
+  flex-direction: column; 
+  overflow: hidden;
+  transition: height 0.3s ease;
 }
 
 .cartContent {
@@ -218,8 +220,6 @@ body {
     overscroll-behavior: contain;
     width: 100%;
     height:90%;
-    /* height:fit-content; */
-
     z-index: 1;
     /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
     box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
@@ -231,7 +231,6 @@ body {
     display: block;
     justify-self: center;
     align-content: center;
-    /* background-color: rgb(241, 240, 240); */
     height:100%; 
 }
 
@@ -245,7 +244,7 @@ body {
     padding: 10px 0 10px 0; 
     width: 100%;
     margin-inline: auto;
-    max-width: 600px;
+    /* max-width: 600px; */
 
   display: grid;
   grid-template-columns: auto auto;
@@ -277,15 +276,15 @@ body {
 .addtocartButton{
     height: 46px;
     width: 100%;
-    max-width: 600px;
+    /* max-width: 600px; */
     margin-inline: auto;
-    background-color: #64afff;
+    background-color: #4791e1;
     color: white;
     aspect-ratio: 3 / 1;
     font-size: 16px;
     font-weight: bold;
     border: none;
-    border-radius: 80px;
+    border-radius: 50px;
     cursor: pointer;
 }
 
@@ -302,7 +301,7 @@ body {
     /* width: 90%; */
     /* height: 10%; */
     /* min-height: fit-content; */
-    z-index: 4;
+    z-index: 3;
     /* border-top: 1px solid #ccc;   */
     box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
     border-radius: 0 0 0 10px;
@@ -311,20 +310,20 @@ body {
     text-align: center;
 }
 
-.checkout button {
+#checkoutBtn {
   background: #3939398b;
   color: white;
   border: none;
   cursor: pointer;
   font-size: 14px;
-  border-radius: 4px;
+  border-radius: 40px;
   width: 100px;
   height: 40px;
 
 }
 
-.checkout button.enabled{
-  background: #199536da;
+#checkoutBtn.enabled{
+  background: #159433da;
 }
 
 
@@ -354,7 +353,7 @@ body {
     background: #393939;
     /* position: relative; */
     margin-bottom: 15px;
-    border-radius: 16px;
+    border-radius: 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     /* height: 100%; */
@@ -376,7 +375,7 @@ body {
     /* min-height: 200px; */
     display: flex;
     flex-direction: column;
-    margin: 20px 16px;
+    margin: 10px 10px;
     flex: 1;
 }
 
@@ -468,7 +467,7 @@ body {
 }
 
 #qrcode-div-id{
-    display: none;
+    display: flex;
     /* align-content: center; */
     flex-direction: column;
     position: fixed;
@@ -544,10 +543,24 @@ body {
     /* right:16px; */
     font-size: 20px;
     border: none;
-    background-color: #64afff;
+    background-color: #4791e1;
     color: white;
     border-radius: 40px;
     cursor: pointer;
+}
+
+
+#qrcode-div-background-id{
+    display: none;
+    align-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 #image_viewer_window {
