--- a/404.css
+++ b/404.css
@@ -1,45 +1,46 @@
-
 body {
     margin: 0;
-    padding: 0;font-family: "Lato", sans-serif;
+    padding: 0;
+    font-family: "Lato", sans-serif;
     background-color: #f1f8fb;
     min-width: 400px;
     justify-items: center;
 }
 
- #qrcode{
-            margin: auto;
-            margin-bottom: 20px;
-        }
+#qrcode {
+    margin: auto;
+    margin-bottom: 20px;
+}
 
-        #qrcode-div-id{
-            display: flex;
-            justify-items: center;
-            flex-direction: column;
-            text-align: center;
-        }
+#qrcode-div-id {
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    text-align: center;
+}
 
-        h2{
-            text-align: center;
-        }
+h2 {
+    text-align: center;
+}
 
-        #cart_contents_id {
+#cart_contents_id {
 
-  width: 100%;
-  height: 80%;
-  /* overflow-y: auto;  */
-  flex-direction: column; 
-  overflow: hidden;
-  transition: height 0.3s ease;
+    width: 100%;
+    /* height: 80%; */
+
+  
+    /* overflow-y: auto; */
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .cartContent {
     display: block;
-    flex: 1; 
-    overflow-y: auto;
+    flex: 1;
     overscroll-behavior: contain;
     width: 100%;
-    height:90%;
+    height: 90%;
+    max-height: 400px !important;
     z-index: 1;
     /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
     box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
@@ -48,52 +49,54 @@ body {
 }
 
 .cartItems {
-  width: 100%;
+    width: 100%;  height: 400px;
+    overflow-y: auto;
 }
-    
-
-        .cartItemContainter {
-                display: flex;
-                flex-direction: row;
-                position: relative;
-                width: 90%;
-                height: 70px;
-                margin: 15px 10px 0 15px;
-                padding: 0 0 10px 0;
-                border-bottom: 1px solid rgb(134, 134, 134);
-             }
 
 
-            .leftpic {
-                flex: 1;
-                /* position: relative;  */
-            }
-
-            .leftpic img {
-                width: auto;
-                height: 100%;
-                overflow: hidden;
-
-                object-fit: contain;
-                border-radius: 5px;
-            }
-
-            .rightname {
-                flex: 3;
-                margin-left: 10px;
-            }
-
-            .rightname p {
-                margin: 0;
-            }
+.cartItemContainter {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 90%;
+    height: 70px;
+    margin: 15px 10px 0 15px;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid rgb(134, 134, 134);
+}
 
 
-    .blurred {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 87% !important; /* TODO: 'fix'/solve this problem later*/
-        filter: grayscale(100%) brightness(50%);
-        clip-path: inset(0 0 0 50%);
-        }
+.leftpic {
+    flex: 1;
+    /* position: relative;  */
+}
+
+.leftpic img {
+    width: auto;
+    height: 100%;
+    overflow: hidden;
+
+    object-fit: contain;
+    border-radius: 5px;
+}
+
+.rightname {
+    flex: 3;
+    margin-left: 10px;
+}
+
+.rightname p {
+    margin: 0;
+}
+
+
+.blurred {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 87% !important;
+    /* TODO: 'fix'/solve this problem later*/
+    filter: grayscale(100%) brightness(50%);
+    clip-path: inset(0 0 0 50%);
+}
