--- a/404.css
+++ b/404.css
@@ -2,63 +2,89 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Lato", sans-serif;
-    background-color: #f1f8fb;
+    /* background-color: #f1f8fb; */
+    background-image: url('background_image.png');
+    background-size: cover; /* Scales the image to cover the entire element */
+    background-position: center; /* Centers the background image */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     min-width: 400px;
     justify-items: center;
 }
 
 #qrcode {
-    margin: auto;
-    margin-bottom: 20px;
+    margin-inline: 40px;
+    /* margin-bottom: 20px; */
 }
 
 #qrcode-div-id {
     display: flex;
-    justify-items: center;
+    /* flex: 0.7; */
+    align-items: center;
     flex-direction: column;
     text-align: center;
 }
 
 h2 {
+    margin-top: 20px;
     text-align: center;
 }
 
+.pan_text{
+    color: rgba(243, 56, 56, 0.88)
+}
+
 #cart_contents_id {
-
-    width: 100%;
-    /* height: 80%; */
-
-  
-    /* overflow-y: auto; */
+    /* flex:1; */
+    /* position: relative; */
+    width: 80%;
+    /* height: 20%; */
+    max-height: 500px;
+    /* border-radius: 0 0 30px 30px; */
+    margin-block: 20px;
+    overflow-y: auto;
     flex-direction: column;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .cartContent {
     display: block;
     flex: 1;
-    overscroll-behavior: contain;
-    width: 100%;
-    height: 90%;
-    max-height: 400px !important;
-    z-index: 1;
-    /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
-    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
+    height: 90%; 
     background-color: white;
-    /* animation: kf_cart_expand 0.5s; */
 }
 
 .cartItems {
-    width: 100%;  height: 400px;
-    overflow-y: auto;
+    /* width: 100%;   */
+    /* height: 400px; */
+    overflow-y: hidden;
+    /* overflow-y: hidden; */
+    
+    /* overflow:hidden; */
+    
+    /* overflow: contain; */
 }
 
+.main_container{
+    display: flex;
+    margin-top: 100px;
+    margin-left: 30px;
+    flex-direction: row-reverse;
+    align-items: center;
+    width: 80%;
+    height: fit-content;
+    max-width: 900px;
+    max-height: 600px;
+    /* border-radius: 50px; */
+    background-color: white;  
+    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
+}
 
 .cartItemContainter {
     display: flex;
     flex-direction: row;
     position: relative;
-    width: 90%;
+    /* width: 90%; */
     height: 70px;
     margin: 15px 10px 0 15px;
     padding: 0 0 10px 0;
@@ -77,7 +103,7 @@ h2 {
     overflow: hidden;
 
     object-fit: contain;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .rightname {
@@ -99,4 +125,35 @@ h2 {
     /* TODO: 'fix'/solve this problem later*/
     filter: grayscale(100%) brightness(50%);
     clip-path: inset(0 0 0 50%);
+}
+
+
+@media screen and (max-width: 800px) {
+
+
+
+    .main_container{
+        margin: 0;
+        margin-top: 50px;
+       /*  margin-bottom: 120px; */
+     display: flex;
+     flex-direction: column;
+     /* align-items: center; */
+     /* margin: auto; */
+    width: 90%;
+    height: 90vh;
+    max-width: 500px;
+    max-height: 900px;
+    /* border-radius: 50px; */
+    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
+}
+
+#cart_contents_id {
+    width: 96%;
+    /* height: 100%; */
+    /* border-radius: 0 0 30px 30px; */
+    /* margin: 20px; */
+    flex-direction: column;
+}
+    
 }
