--- a/home.css
+++ b/home.css
@@ -241,7 +241,7 @@ body {
 .pan_button_div{
     /* display: flex;
     justify-content: center;*/
-    padding: 10px 0 10px 0; 
+    padding: 10px 0 0 0; 
     width: 100%;
     margin-inline: auto;
     /* max-width: 600px; */
@@ -262,7 +262,7 @@ body {
 }
 
 .portionButton{
-    background-color: #ffad5057;
+    background-color: #ffad5067;
     color: orange;
     font-size: 15px;
     border: none;
@@ -288,11 +288,36 @@ body {
     cursor: pointer;
 }
 
-.disableAddToCart{
+.cirButton{
+    position: absolute; 
+    top: -70px; 
+    right: 10px; 
+    width: 60px; 
+    height:60px; 
+    /* max-width: 60px;
+    max-height: 60px; */
+    background-color: white;
+    border-radius:50%;
+    border: none;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.566);
+   font-size: 32px;
+    cursor: pointer;
+    text-align: center;
     
-    background-color: #bebebe;
-    cursor: default;
+  transform: rotate(0deg);  
+    transition: transform 0.2s ease;
 }
+
+.cirButton.itemWasAdded{
+    
+   font-size: 38px;
+  background-color: #e1968e;
+  /* background-color: black;
+  color: white;
+transition: color 2s; */
+  transform: rotate(135deg);
+}
+
 
 .checkout {
     display: flex;
@@ -323,7 +348,9 @@ body {
 }
 
 #checkoutBtn.enabled{
-  background: #159433da;
+  /* background: #159433da; */
+  background: #4091ee;
+
 }
 
 
@@ -350,10 +377,10 @@ body {
 .menu-item {
     display: flex;
     flex-direction: column;
-    background: #393939;
+    /* background: #393939d5; */
     /* position: relative; */
     margin-bottom: 15px;
-    border-radius: 30px;
+    border-radius: 0 0 30px 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     /* height: 100%; */
@@ -362,6 +389,7 @@ body {
 .menu-item img {
     width: 100%;
     border-radius: 16px 16px 0 0;
+    /* opacity: 1; */
     /* object-fit: contain; */
 }
 
@@ -374,19 +402,22 @@ body {
 .menu-item-content {
     /* min-height: 200px; */
     display: flex;
+    position: relative;
     flex-direction: column;
-    margin: 10px 10px;
+    background: #393939d5;
+    padding: 10px 10px;
+    
+    border-radius: inherit;
     flex: 1;
 }
 
 .menu-item-content h3 {
-    color: #ba783b;
+    color: #4791e1d2;
     /* margin: 15px 0 0 0; */
     margin: 0;
     font-size: 24px;
 }
-        .languageContainer{
-            
+        .languageContainer{ 
             position: relative;
             float: left;
             display: flex;
@@ -695,6 +726,14 @@ body {
 
 
 @media screen and (max-width: 600px) {
+
+    
+.cirButton{
+    top: -60px; 
+    right: 10px; 
+    width: 50px; 
+    height:50px; 
+}
 
     .menu {
         padding: 0 20px;
