--- a/home.css
+++ b/home.css
@@ -479,7 +479,7 @@ transition: color 2s; */
 .menu-item-content p {
     margin: 10px 0 5px 0;
     font-size: 18px;
-    color: #e6e6e6;
+    color: #ffffff;
 }
 
 .menu-item-content input {
