--- a/home.css
+++ b/home.css
@@ -379,16 +379,19 @@ transition: color 2s; */
     flex-direction: column;
     /* background: #393939d5; */
     /* position: relative; */
+    background: #393939d5;
     margin-bottom: 15px;
-    border-radius: 0 0 30px 30px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 100px 0 30px 30px;
+    
+    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
     width: 100%;
     /* height: 100%; */
 }
 
 .menu-item img {
     width: 100%;
-    border-radius: 16px 16px 0 0;
+    border-radius: 100px 0 100px 0 ;
+    /* background-color: #393939d5; */
     /* opacity: 1; */
     /* object-fit: contain; */
 }
@@ -404,7 +407,7 @@ transition: color 2s; */
     display: flex;
     position: relative;
     flex-direction: column;
-    background: #393939d5;
+    /* background: #393939d5; */
     padding: 10px 10px;
     
     border-radius: inherit;
@@ -721,6 +724,17 @@ transition: color 2s; */
     text-align: center; 
     margin-block: 40px;
     margin-inline: 5px;
+}
+
+
+.footer {
+    height: 200px;
+    width: 100%;
+    margin-top: 70px;
+    text-align: center;
+    padding: 20px 0px;
+    position: relative;
+    background-image: linear-gradient(rgb(42, 42, 42), rgba(62, 37, 16, 0.925));
 }
 
 
