--- a/home.css
+++ b/home.css
@@ -290,12 +290,10 @@ body {
 
 .cirButton{
     position: absolute; 
-    top: -70px; 
+    top: -65px; 
     right: 10px; 
     width: 60px; 
     height:60px; 
-    /* max-width: 60px;
-    max-height: 60px; */
     background-color: white;
     border-radius:50%;
     border: none;
@@ -363,8 +361,8 @@ transition: color 2s; */
     display: grid;
 
     /* grid-template-columns: auto auto auto; */
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+    gap: 30px;
 }
 
 .menu h1 {
@@ -377,29 +375,25 @@ transition: color 2s; */
 .menu-item {
     display: flex;
     flex-direction: column;
-    /* background: #393939d5; */
-    /* position: relative; */
-    background: #393939d5;
+    background: linear-gradient(
+    to bottom, 
+    #fff 0%,      
+    #fff 30%,     
+    #393939E0 30%,
+    #393939E0 100%
+  );
     margin-bottom: 15px;
-    border-radius: 100px 0 30px 30px;
-    
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
-    width: 100%;
-    /* height: 100%; */
+    border-radius: 100px 100px 30px 30px;
+    /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6); */
 }
 
 .menu-item img {
     width: 100%;
-    border-radius: 100px 0 100px 0 ;
-    /* background-color: #393939d5; */
-    /* opacity: 1; */
-    /* object-fit: contain; */
+    border-radius: 60px 0 120px 0;
 }
 
 .menu-item img:hover {
     cursor: pointer;
-    /* scale: 1.05;
-    transition: scale 0.5s ease; */
 }
 
 .menu-item-content {
@@ -471,7 +465,7 @@ transition: color 2s; */
             border-radius: 50px;
             transition: transform 0.5s ease;
             transform: translateX(0);
-            box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.9);
+            box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.9);
         }
 
         .switchBall.changeToSpanish{
@@ -633,58 +627,6 @@ transition: color 2s; */
     text-shadow: 0 0 6px rgba(0, 0, 0, 0.9);
 }
 
-
-.checkboxDiv {
-    display: flex;
-    /* justify-content: space-around; */
-    justify-content: center;
-    align-self: center;
-    gap: 2px;
-    /* height: 100%; */
-    /* width: auto; */
-    
-    /* aspect-ratio: 1 / 1; */
-    /* position: absolute; */
-    /* padding: 15px;
-    bottom: 0;
-    left: 0; */
-}
-
-.checkboxMinus,
-.checkboxPlus {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    /* margin-inline: 2px; */
-    /* width: 20px; */
-    /* background: #f6992f37; */
-    border-radius: 40px;
-    /* border: 1px solid #ddd; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size:26px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.checkboxInput {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0;
-    font-size:20px;
-    /* border: 1px solid #ddd; */
-    /* background: #f6992f37; */
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    color: rgba(0, 0, 0, 0.5);
-    
-}
-
 .cartPlusMinusDiv{
     display: flex;
     justify-content: center;
@@ -714,12 +656,6 @@ transition: color 2s; */
     cursor: pointer;
 }
 
-
-/* .checkboxMinus:hover,
-.checkboxPlus:hover {
-    opacity: 0.5;
-} */
-
 #disclaimerTextId{
     text-align: center; 
     margin-block: 40px;
@@ -734,20 +670,12 @@ transition: color 2s; */
     text-align: center;
     padding: 20px 0px;
     position: relative;
-    background-image: linear-gradient(rgb(42, 42, 42), rgba(62, 37, 16, 0.925));
+    background-color: #333;
+    /* background-image: linear-gradient(rgb(42, 42, 42), rgba(62, 37, 16, 0.925)); */
 }
-
 
 
 @media screen and (max-width: 600px) {
-
-    
-.cirButton{
-    top: -60px; 
-    right: 10px; 
-    width: 50px; 
-    height:50px; 
-}
 
     .menu {
         padding: 0 20px;
