--- a/home.css
+++ b/home.css
@@ -150,6 +150,8 @@ body {
                 margin: 15px 10px 0 15px;
                 padding: 0 0 10px 0;
                 border-bottom: 1px solid rgb(134, 134, 134);
+                overflow-y: scroll;
+                /* overflow-x: none; */
              }
 
 
