--- a/home.css
+++ b/home.css
@@ -150,8 +150,7 @@ body {
                 margin: 15px 10px 0 15px;
                 padding: 0 0 10px 0;
                 border-bottom: 1px solid rgb(134, 134, 134);
-                overflow-y: scroll;
-                /* overflow-x: none; */
+                overflow: hidden; 
              }
 
 
@@ -162,15 +161,15 @@ body {
             .leftpic img {
                 width: auto;
                 height: 100%;
-                overflow: hidden;
-
                 object-fit: contain;
                 border-radius: 5px;
             }
 
             .rightname {
                 flex: 3;
+                min-width: 0;
                 margin-left: 10px;
+                /* overflow-wrap: break-word;  */
             }
 
             .rightname p {
