--- a/home.css
+++ b/home.css
@@ -300,54 +300,26 @@ body {
     color: black;
     border-radius:50%;
     border: none;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.566);
-   font-size: 32px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.566);          
     cursor: pointer;
-    /* text-align: center; */
-    /* margin: 0 auto; */
-    /* padding: 0; */
-  transform: rotate(0deg);  
+    text-align: center;
+    transform: rotate(0deg);  
     transition: transform 0.2s ease;
 }
 
 .cirButton.itemWasAdded{
-    
-   /* font-size: 38px; */
   background-color: #e1968e;
-  /* transform: rotate(135deg); */
+  transform: rotate(135deg);
 }
 
-
- .plus-sign {
-            /* Styling for the plus sign text */
-            font-size: 40px;
-            font-weight: 300; /* Light weight for a cleaner look */
-            background-color: white;
-            color: black;
-            line-height: 1;
-            height: 40px;
-            width: 40px;
-            /* The core of the rotation animation! */
-            /* Add a transition for smooth movement over 0.4 seconds */
-            transition: transform 0.2s ease;
-            /* Start at 0 degrees */
-            transform: rotate(0deg);
-            background: transparent;
+.plus{
+    height: 70%;
 }
-
-.plus-sign.itemWasAdded{
-     /* background-color: #e1968e; */
-     transform: rotate(135deg);
-}
-
 
 .checkout {
     display: flex;
     justify-content:space-between;
     align-items: center;
-    /* width: 90%; */
-    /* height: 10%; */
-    /* min-height: fit-content; */
     z-index: 2;
     /* border-top: 1px solid #ccc;   */
     /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
