--- a/home.css
+++ b/home.css
@@ -129,7 +129,7 @@ body {
     cursor: pointer;
 }
 
-@keyframes kf_cart_expand {
+/* @keyframes kf_cart_expand {
     0% {
         opacity: 0.5;
         height: 0%;
@@ -139,7 +139,7 @@ body {
         opacity: 1;
         height: 90%;
     }
-}
+} */
 
 .cartItemContainter {
     display: flex;
@@ -170,10 +170,7 @@ body {
 }
 
 .rightname {
-    flex: 1.4;
-    /* min-width: 0; */
-    /* margin-left: 10px; */
-    /* overflow-wrap: break-word;  */
+    flex: 1.7;
 }
 
 .rightname p {
@@ -198,36 +195,33 @@ body {
   clip-path: inset(0 0 0 50%);
 }
 
+#cart_contents_id {
+  position: fixed;
+  top: 53px;
+  right: 0;
+  width: 350px;
+  height: 0;
+  max-height: 400px;
+  z-index: 2;
+  transition: height 0.3s ease;
+  overflow: hidden; 
+}
+
 #cart_contents_id.open {
   overflow: visible;
   height: 50%;
 }
 
-#cart_contents_id {
-  position: fixed;
-  top: 53px;
-  right: 0;
-  width: 50%;
-  height: 0;
-  /* overflow-y: auto;  */
-  max-width: 380px;
-  min-width: 300px;
-  max-height: 400px;
-  z-index: 2;
-  flex-direction: column; 
-  overflow: hidden;
-  transition: height 0.3s ease;
-}
-
 .cartContent {
-    display: block;
-    flex: 1; 
-    overflow-y: auto;
-    /* overscroll-behavior: contain; */
-    /* overflow: hidden; */
-    width: 100%;
-    height:90%;
-    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    /* flex: 1;  */
+    /* width: 100%; */
+    height:100%;
+    /* height: 400px; */
+  position: relative;
+    /* z-index: 3; */
+  border-radius: 0 0 0 10px;
     /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
     /* box-shadow: -10px 10px 16px 0px rgba(0, 0, 0, 0.3); */
     
@@ -239,17 +233,58 @@ body {
 .nothing_in_cart{
     display: flex;
     justify-content: center;
-    /* align-self: center; */
+    align-content: center;
+    margin: 50% auto;
+    /* margin: 0; */
+    text-align: center;
+    /* height:100%  */
+    transition-delay: 0.4s;
+}
 
-  /* text-align: center;  */
-  /* overflow: hidden; */
-  margin: 50% auto;
-  /* width: 200px; */
-    height:100% 
+.checkout_div {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    z-index:4;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    right: 0;
+    /* border-top: 1px solid #ccc;   */
+    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
+    /* box-shadow: -4px 4px 20px rgba(0, 0, 0, 0.3); */
+    /* box-shadow: -4px 0 20px -10px rgba(0, 0, 0, 0.3),  */
+              /* 0 5px 5px -3px rgba(0, 0, 0, 0.5);       */
+    border-radius: inherit;
+    padding: 10px 15px;
+    background-color: white;
+    text-align: center;
+    /* margin-top: auto; */
+}
+
+#checkoutBtn {
+  background: #3939398b;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 40px;
+  width: 100px;
+  height: 40px;
+
+}
+
+#checkoutBtn.enabled{
+  /* background: #159433da; */
+  background: #4091ee;
+
 }
 
 .cartItems {
-  width: 100%;
+    /* flex:1; */
+  /* width: 100%; */
+    overflow-y: auto;
+    padding-bottom: 70px;
 }
 
 .pan_button_div{
@@ -317,38 +352,6 @@ body {
 .plus{
     height: 40px;
     width: 40px;
-}
-
-.checkout {
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    z-index: 2;
-    /* border-top: 1px solid #ccc;   */
-    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
-    box-shadow: -4px 4px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 0 0 0 10px;
-    padding: 10px 15px;
-    background-color: white;
-    text-align: center;
-}
-
-#checkoutBtn {
-  background: #3939398b;
-  color: white;
-  border: none;
-  cursor: pointer;
-  font-size: 14px;
-  border-radius: 40px;
-  width: 100px;
-  height: 40px;
-
-}
-
-#checkoutBtn.enabled{
-  /* background: #159433da; */
-  background: #4091ee;
-
 }
 
 
@@ -507,11 +510,9 @@ body {
     right:0;
     bottom: 0;
     width: 90%;
-    /* height: 86%; */
+    height: 650px;
     max-width: 400px;
-    max-height: 650px;
     margin: 10px auto;
-    /* margin: 15px; */
     background-color: #fffffffc;
     border-radius: 20px;
     box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
