--- a/home.css
+++ b/home.css
@@ -15,17 +15,8 @@ body {
 .body_content {
     width: 100%;
     max-width: 1200px;
+    margin-inline: auto;
 }
-
-/* .backgroud_container {
-    display: flex;
-    max-height: 500px;
-    overflow:hidden;
-}
-
-.backgroud_container img {
-    width: 100%;
-} */
 
 /* Menu layout */
 .menu {
@@ -230,15 +221,8 @@ body {
     /* animation: kf_cart_expand 0.5s; */
 }
 
-.nothing_in_cart{
-    display: flex;
-    justify-content: center;
-    align-content: center;
+#nothing_in_cart{
     margin: 50% auto;
-    /* margin: 0; */
-    text-align: center;
-    /* height:100%  */
-    transition-delay: 0.4s;
 }
 
 .checkout_div {
@@ -250,16 +234,10 @@ body {
     bottom: 0;
     left:0;
     right: 0;
-    /* border-top: 1px solid #ccc;   */
-    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
-    /* box-shadow: -4px 4px 20px rgba(0, 0, 0, 0.3); */
-    /* box-shadow: -4px 0 20px -10px rgba(0, 0, 0, 0.3),  */
-              /* 0 5px 5px -3px rgba(0, 0, 0, 0.5);       */
     border-radius: inherit;
     padding: 10px 15px;
     background-color: white;
     text-align: center;
-    /* margin-top: auto; */
 }
 
 #checkoutBtn {
@@ -275,14 +253,10 @@ body {
 }
 
 #checkoutBtn.enabled{
-  /* background: #159433da; */
   background: #4091ee;
-
 }
 
 .cartItems {
-    /* flex:1; */
-  /* width: 100%; */
     overflow-y: auto;
     padding-bottom: 70px;
 }
